# openbuddy

./: .gitignore  AGENTS.md  README.md  TODO.md  build-buddy.sh  start-buddy.sh
analysis/: character_gif_architecture.md  message_semantics.md  opencode_event_dispatch.md  opencode_event_dispatch_corrected.md  opencode_formal_semantics.md  opencode_framework_deep_dive.md  rca_mock_crash.md  screen_behavior.md  screen_behavior_facts.md  sdl_event_loop_explained.md  sdl_flickering_rca.md  state_graph_upstream.md  stats_species_architecture.md  (+1 more)
buddy/: .clangd  CMakeLists.txt
buddy/src/: asio_transport.cpp  asio_transport.h  buddy_renderer.cpp  buddy_renderer.h  log.h  main.cpp  mock_source.cpp  mock_source.h  mock_transport.cpp  mock_transport.h  persistence.cpp  persistence.h  protocol_types.h  renderer.cpp  renderer.h  session.cpp  session.h  session_renderer.cpp  session_renderer.h  species.h  state_machine.cpp  state_machine.h  stats.cpp  stats.h  test_protocol_types.cpp  thread_queue.h  transport.h
buddy/src/species/: README.md  axolotl.cpp  blob.cpp  cactus.cpp  capybara.cpp  cat.cpp  chonk.cpp  dragon.cpp  duck.cpp  ghost.cpp  goose.cpp  mushroom.cpp  octopus.cpp  owl.cpp  penguin.cpp  rabbit.cpp  robot.cpp  snail.cpp  turtle.cpp
buddy/test/fixtures/: ack_template.json  char_begin.json  char_end.json  chunk.json  file_end.json  file_meta.json  heartbeat_full.json  heartbeat_no_prompt.json  heartbeat_partial.json  name_cmd.json  owner_cmd.json  permission_deny.json  permission_once.json  status_ack.json  time_sync.json  turn_event.json  unpair_cmd.json
(+20 files in other folders)
